--- a/src/index.html
+++ b/src/index.html
@@ -6,17 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="grid place-items-center p-8">
+  <body class="grid place-items-center p-4">
     <h1 class="text-xl font-bold text-emerald-700">Tailwind Template E2022</h1>
     <p class="text-emerald-500">
       Powered by <a href="https://vitejs.dev/guide">Vite</a>
     </p>
     <img src="img/vite.svg" alt="Vite Logo" />
+    <section class="md:grid md:grid-cols-2 md:grid-rows-2 md:gap-10">
+      <div class="relative mt-8 mb-8">
+        <img
+          src="https://kea.dk/slir/w1170-c100x40/images/DA/For-virksomheder/Samarbejde.jpg"
+          alt=""
+        />
+        <div
+          class="absolute bottom-0 left-0 flex place-content-between bg-slate-800 px-4 py-2 opacity-80 hover:opacity-0"
+        >
+          <a class="text-2xl font-semibold uppercase text-white" href=""
+            >Lav projekter med KEAs studerende</a
+          >
+          <svg class="text-white" width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="m12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8l-8-8z"
+            />
+          </svg>
+        </div>
 
-    <img
-      src="https://kea.dk/slir/w1170-c100x40/images/DA/For-virksomheder/Samarbejde.jpg"
-      alt=""
-    />
+        <div
+          class="absolute bottom-0 left-0 flex place-content-between bg-slate-800 px-4 py-2 opacity-0 transition delay-150 ease-in-out hover:opacity-100"
+        >
+          <a class="" href="">
+            <p class="font-semibold uppercase text-white">
+              Lav projekter med KEAs studerende
+            </p>
+            <p class="text-white">
+              Vil du gerne samarbejde med studerende i et projekt i din
+              virksomhed? Der er flere muligheder, alt efter projektets omfang.
+            </p>
+          </a>
+        </div>
+      </div>
+
+      <div class="">
+        <div
+          class="flex place-content-between bg-red-600 px-4 py-12 hover:bg-red-500"
+        >
+          <a class="text-3xl font-semibold uppercase text-white" href=""
+            >Kontakt os</a
+          >
+          <svg class="text-white" width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="m12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8l-8-8z"
+            />
+          </svg>
+        </div>
+
+        <div
+          class="mt-4 flex place-content-between bg-slate-800 px-4 py-8 hover:bg-slate-700"
+        >
+          <a class="text-xl font-semibold uppercase text-white" href=""
+            >Vil du læse et semester i udlandet som en del af din uddannelse?
+            Læs mere her</a
+          >
+          <svg class="text-white" width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="m12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8l-8-8z"
+            />
+          </svg>
+        </div>
+      </div>
+    </section>
 
     <script type="module" src="./main.js"></script>
   </body>
