--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,21 @@
     <p class="text-emerald-500">
       Powered by <a href="https://vitejs.dev/guide">Vite</a>
     </p>
-    <img src="img/vite.svg" alt="Vite Logo" />
+    <img class="md:mb-8" src="img/vite.svg" alt="Vite Logo" />
+
     <section class="md:grid md:grid-cols-2 md:grid-rows-2 md:gap-10">
-      <div class="relative mt-8 mb-8">
+      <div class="relative mt-8 mb-8 md:mt-0 md:mb-0">
         <img
+          class=""
           src="https://kea.dk/slir/w1170-c100x40/images/DA/For-virksomheder/Samarbejde.jpg"
           alt=""
         />
         <div
           class="absolute bottom-0 left-0 flex place-content-between bg-slate-800 px-4 py-2 opacity-80 hover:opacity-0"
         >
-          <a class="text-2xl font-semibold uppercase text-white" href=""
+          <a
+            class="text-2xl font-semibold uppercase text-white md:text-xl"
+            href=""
             >Lav projekter med KEAs studerende</a
           >
           <svg class="text-white" width="32" height="32" viewBox="0 0 24 24">
@@ -49,9 +53,11 @@
 
       <div class="">
         <div
-          class="flex place-content-between bg-red-600 px-4 py-12 hover:bg-red-500"
+          class="flex place-content-between bg-red-600 px-4 py-12 hover:bg-red-500 md:py-6"
         >
-          <a class="text-3xl font-semibold uppercase text-white" href=""
+          <a
+            class="text-3xl font-semibold uppercase text-white md:text-2xl"
+            href=""
             >Kontakt os</a
           >
           <svg class="text-white" width="32" height="32" viewBox="0 0 24 24">
@@ -63,9 +69,11 @@
         </div>
 
         <div
-          class="mt-4 flex place-content-between bg-slate-800 px-4 py-8 hover:bg-slate-700"
+          class="mt-4 flex place-content-between bg-slate-800 px-4 py-8 hover:bg-slate-700 md:py-4"
         >
-          <a class="text-xl font-semibold uppercase text-white" href=""
+          <a
+            class="text-xl font-semibold uppercase text-white md:text-lg"
+            href=""
             >Vil du læse et semester i udlandet som en del af din uddannelse?
             Læs mere her</a
           >
